namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-tax-compliance-app-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-tax-compliance-app-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "people-analytics"
    cloud-platform.justice.gov.uk/application: "tax-compliance-app"
    cloud-platform.justice.gov.uk/owner: "people-analytics: peopleanalytics@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/tax-compliance-app"
    cloud-platform.justice.gov.uk/team-name: "tax-compliance-app-admin"
    cloud-platform.justice.gov.uk/review-after: "18-Sep-24"
